--- a/test/test.html
+++ b/test/test.html
@@ -15,6 +15,9 @@
 
     <script src="../backend/util/vector.js"></script>
     <script src="../backend/entity.js"></script>
+    <script src="../backend/zombie.js"></script>
+    <script src="../backend/weapon/melee.js"></script>
+    <script src="../backend/weapon/pistol.js"></script>
     <script src="modelTest.js"> </script>
 
 </body>
