Implemented collision detection tests

--- a/test/test.html
+++ b/test/test.html
@@ -4,21 +4,19 @@
     <meta charset="utf-8">
     <title>Tests</title>
     <link rel="stylesheet" href="qunit-1.13.0.css">
-
-
-
 </head>
+
 <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="qunit.js"></script>
-
+    <script src="../backend/util/hashSet.js"></script>
     <script src="../backend/util/vector.js"></script>
     <script src="../backend/entity.js"></script>
     <script src="../backend/zombie.js"></script>
     <script src="../backend/weapon/melee.js"></script>
     <script src="../backend/weapon/pistol.js"></script>
+    <script src="../backend/entityData.js"></script>
     <script src="modelTest.js"> </script>
-
 </body>
 </html>
